--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a class="" href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="services.html">Services</a>
-            <a href="contacts,html">contacts</a>
+            <a href="contacts.html">contacts</a>
         </div>
         <div class="icon remove1100 remove">
             <img src="images/list 1.png" alt="">
